--- a/templates/usuario/registro.html
+++ b/templates/usuario/registro.html
@@ -16,7 +16,7 @@
         <form method="post"> <!--post porque enviaremos información-->
             {% csrf_token %}
             <div class="mb-3">
-              <label for="username-id" class="form-label">Usuarios</label>
+              <label for="username-id" class="form-label">Nombre de usuario</label>
               <input 
               type="text" 
               class="form-control" 
@@ -50,7 +50,7 @@
               <input type="password" class="form-control" id="password-id" name="password">
             </div>
             <div class="mb-3">
-                <label for="password2-id" class="form-label">Confirma tu ontraseña</label>
+                <label for="password2-id" class="form-label">Confirma tu contraseña</label>
                 <input type="password" class="form-control" id="password2-id" name="password2">
             </div>
             <div class="btn-group" role="group" aria-label="Basic example">
