--- a/templates/usuario/registro.html
+++ b/templates/usuario/registro.html
@@ -13,7 +13,7 @@
             {{error}}
         </div>
         {% endfor %}
-        <form method="post"> <!--post porque enviaremos información-->
+        <form method="post"> 
             {% csrf_token %}
             <div class="mb-3">
               <label for="username-id" class="form-label">Nombre de usuario</label>
