--- a/templates/publicacion/profesor.html
+++ b/templates/publicacion/profesor.html
@@ -11,6 +11,7 @@
             <div class="card mb-3">
                 <div class="card-body">
                   <h5 class="card-title">{{publicacion.titulo}}</h5>
+                  <h6 class="card-subtitle mb-2 text-body-secondary text-end">Sobre {{publicacion.profesor}}</h6>
                   <p class="card-text">{{publicacion.comentario}}</p>
                 </div>
                 <div class="card-footer text-body-secondary text-end">
