Correction of mistakes

--- a/templates/usuario/inicio_sesion.html
+++ b/templates/usuario/inicio_sesion.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <section>
-    <div class="container">
+    <div class="container mt-5">
         <h1>Inicio Sesión</h1>
         {% if form.errors %}
         <div class="alert alert-danger" role="alert">
@@ -35,7 +35,10 @@
                 <button type="reset" class="btn btn-secundary">Limpiar</button>
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </div>
-          </form>
+        </form>
+    </div>
+    <div class="container text-center mt-2">
+      <p>Si aún no estás registrado <a href="/registro">Regístrate</a></p>
     </div>
 </section>
 
