--- a/templates/publicacion/index.html
+++ b/templates/publicacion/index.html
@@ -5,9 +5,32 @@
 {% endblock title %}
 
 {% block content %}
+
+    <!-- Barra de Navegación -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/main">WIKIPROFES</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" href="">Buscar Materia</a>
+                    <a class="nav-link" href="">Buscar Profesor</a>
+                    {% if user.is_authenticated %}
+                    <a class="nav-link" href="">Cerrar Sesión</a>
+                    {% else %}
+                    <a class="nav-link" href="">Iniciar Sesión</a>
+                    <a class="nav-link" href="registro">Regístrate</a>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </nav>
+
     {% for publicacion in publicacion_list %}
     <section>
-        <div class="container">
+        <div class="container mt-5">
             <div class="card mb-3" style="width: 54rem;">
                 <div class="card-body">
                   <h5 class="card-title">{{publicacion.titulo}}</h5>
