Added navbar to publicacion/index

--- a/templates/usuario/inicio_sesion.html
+++ b/templates/usuario/inicio_sesion.html
@@ -32,7 +32,7 @@
               <input type="password" class="form-control" id="password-id" name="password">
             </div>
             <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="reset" class="btn btn-secundary">Limpiar</button>
+                <button type="reset" class="btn btn-secondary">Limpiar</button>
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </div>
         </form>
