--- a/templates/publicacion/profesor.html
+++ b/templates/publicacion/profesor.html
@@ -3,8 +3,7 @@
 <title>Sobre {{publicacion_list.0.profesor}}</title>
 {% endblock titulo %}
 {% block content %}
-    <a href="javascript:history.back()" class="btn btn-secondary mb-3" style="margin: 20px; margin-top: 20px">Regresar</a>
-    <h1 style="margin: 20px;">Sobre {{publicacion_list.0.profesor}}</h1>
+    <h1 class="m-5">Sobre {{publicacion_list.0.profesor}}</h1>
     {% for publicacion in publicacion_list %}
     <section>
         <div class="container">
