--- a/templates/usuario/registro.html
+++ b/templates/usuario/registro.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <section>
-    <div class="container">
+    <div class="container mt-5">
         <h1>Registra tu usuario</h1>
         {% for error in form.non_field_errors %}
         <div class="alert alert-danger" role="alert">
@@ -54,7 +54,7 @@
                 <input type="password" class="form-control" id="password2-id" name="password2">
             </div>
             <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="reset" class="btn btn-secundary">Limpiar</button>
+                <button type="reset" class="btn btn-secondary">Limpiar</button>
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </div>
           </form>
