--- a/templates/publicacion/index.html
+++ b/templates/publicacion/index.html
@@ -9,7 +9,7 @@
     <!-- Barra de Navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/main">WIKIPROFES</a>
+            <a class="navbar-brand" href="/">WIKIPROFES</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -18,10 +18,10 @@
                     <a class="nav-link" href="">Buscar Materia</a>
                     <a class="nav-link" href="">Buscar Profesor</a>
                     {% if user.is_authenticated %}
-                    <a class="nav-link" href="">Cerrar Sesión</a>
+                    <a class="nav-link" href="/logout">Cerrar Sesión</a>
                     {% else %}
-                    <a class="nav-link" href="">Iniciar Sesión</a>
-                    <a class="nav-link" href="registro">Regístrate</a>
+                    <a class="nav-link" href="/inicio">Iniciar Sesión</a>
+                    <a class="nav-link" href="/registro">Regístrate</a>
                     {% endif %}
                 </div>
             </div>
