--- a/templates/publicacion/profesor.html
+++ b/templates/publicacion/profesor.html
@@ -3,6 +3,29 @@
 <title>Sobre {{publicacion_list.0.profesor}}</title>
 {% endblock titulo %}
 {% block content %}
+    <!-- Barra de Navegación -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">WIKIPROFES</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" href="">Buscar Materia</a>
+                    <a class="nav-link" href="">Buscar Profesor</a>
+                    {% if user.is_authenticated %}
+                    <a class="nav-link" href="/logout">Cerrar Sesión</a>
+                    {% else %}
+                    <a class="nav-link" href="/inicio">Iniciar Sesión</a>
+                    <a class="nav-link" href="/registro">Regístrate</a>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </nav>
+
+
     <h1 class="m-5">Sobre {{publicacion_list.0.profesor}}</h1>
     {% for publicacion in publicacion_list %}
     <section>
