--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="">Materias</a>
-                    <a class="nav-link" href="">Profesores</a>
-                    <a class="nav-link" href="">Publicaciones</a>
+                    <a class="nav-link" href="/materias">Materias</a>
+                    <a class="nav-link" href="/">Profesores</a>
+                    <a class="nav-link" href="/">Publicaciones</a>
                     {% if user.is_authenticated %}
                     <a class="nav-link" href="/logout">Cerrar Sesión</a>
                     {% else %}
