--- a/templates/publicacion/index.html
+++ b/templates/publicacion/index.html
@@ -7,11 +7,11 @@
 {% block content %}
     {% for publicacion in publicacion_list %}
     <section>
-        <div class="container">
+        <div class="container mt-5">
             <div class="card mb-3" style="width: 54rem;">
                 <div class="card-body">
                   <h5 class="card-title">{{publicacion.titulo}}</h5>
-                  <h6 class="card-subtitle mb-2 text-body-secondary text-end">sobre {{publicacion.profesor}}</h6>
+                  <h6 class="card-subtitle mb-2 text-body-secondary text-end">sobre  <a href="{% url 'publicacion:profesor' publicacion.profesor.id %}">{{publicacion.profesor}}</a></h6>
                   <p class="card-text">{{publicacion.comentario}}</p>
                 </div>
                 <div class="card-footer text-body-secondary text-end">
