--- a/templates/usuario/wikiprofes.html
+++ b/templates/usuario/wikiprofes.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block titulo %}
-<title>WIKIPROFES - Pagina de Inicio</title>
+<title>WIKIPROFES - Página de Inicio</title>
 {% endblock titulo %}
 
 {% block content %}
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="/materias">Buscar Materia</a>
                     <a class="nav-link" href="/profesores/">Buscar Profesor</a>
                     <a class="nav-link" href="inicio">Iniciar Sesión</a>
-                    <a class="nav-link" href="registro">Regístrate</a>
+                    <a class="nav-link" href="registro.html">Regístrate</a>
                 </div>
             </div>
         </div>
