--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,32 @@
 </head>
 
 <body>
+    <!-- Barra de Navegación -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">WIKIPROFES</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" href="/materias">Materias</a>
+                    <a class="nav-link" href="/">Profesores</a>
+                    <a class="nav-link" href="/">Publicaciones</a>
+                    {% if user.is_authenticated %}
+                    <a class="nav-link" href="/logout">Cerrar Sesión</a>
+                    {% else %}
+                    <a class="nav-link" href="/inicio">Iniciar Sesión</a>
+                    <a class="nav-link" href="/registro">Regístrate</a>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </nav>
     {% block content %}
+    
     {% endblock content %}
+
     {% block jscript %}
     {% endblock jscript %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
