corr: center div

--- a/templates/publicacion/profesor.html
+++ b/templates/publicacion/profesor.html
@@ -4,9 +4,9 @@
 {% endblock titulo %}
 {% block content %}
     <h1 class="m-5">Sobre {{publicacion_list.0.profesor}}</h1>
-    <div class="m-5 profesor-metricas">
-        <h2>Metricas:</h2>
-        <div class="promedios">
+    <div class="m-5 text-center profesor-metricas">
+        <h2>Metricas</h2>
+        <div class="container promedios">
             <div class="card" style="width: 18rem;">
                 <ul class="list-group list-group-horizontal">
                     <li class="list-group-item"> Promedio general {{promedio_general}} </li>
