feat: added comments section

--- a/templates/publicacion/index.html
+++ b/templates/publicacion/index.html
@@ -21,7 +21,9 @@
         </div>
     </section>
     {% endfor %}
+    {% if user.is_authenticated %}
     <div class="d-grid gap-2 d-md-flex justify-content-md-end" style="margin-top: 20px; margin: 20px; width: 30rem">
         <a href="/crear_reseña" class="btn btn-primary mb-3">Agregar Reseña</a>
     </div>
+    {% endif %}
 {% endblock content %}
