--- a/templates/publicacion/publicacion_form.html
+++ b/templates/publicacion/publicacion_form.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <section>
-    <div class="container">
+    <div class="container m-5">
         <h1 style="margin-top: 20px">Registrar Publicación</h1>
         {% for error in form.non_field_errors %}
         <div class="alert alert-danger" role="alert">
