--- a/templates/materias/materias.html
+++ b/templates/materias/materias.html
@@ -4,6 +4,10 @@
 {% block content %}
 
     <div class="container mt-5">
+        <form class="d-flex" role="search" method="get" action="{% url 'publicacion:busqueda_materia' materia_nombre='materia_nombre' %}">
+            <input class="form-control me-2" type="search" name="materia_nombre" placeholder="Buscar materia" aria-label="Search">
+            <button class="btn btn-light" type="submit">Buscar</button>
+        </form>
         <h1>Todas las Materias</h1>
         {% for materia in materia_list %}
             <section>
