--- a/templates/publicacion/publicacion_form.html
+++ b/templates/publicacion/publicacion_form.html
@@ -98,6 +98,7 @@
               id="dominio-id" 
               name="dominio"
               value="{{ form.dominio.value }}"
+              max="10"
               >
               {% for error in form.dominio.errors %}
               <p style="color: #ff5555">{{ error }}</p>
@@ -112,6 +113,7 @@
               id="puntualidad-id" 
               name="puntualidad"
               value="{{ form.puntualidad.value }}"
+              max="10"
               >
               {% for error in form.puntualidad.errors %}
               <p style="color: #ff5555">{{ error }}</p>
@@ -126,6 +128,7 @@
               id="asistencia-id" 
               name="asistencia"
               value="{{ form.asistencia.value }}"
+              max="10"
               >
               {% for error in form.asistencia.errors %}
               <p style="color: #ff5555">{{ error }}</p>
@@ -140,6 +143,7 @@
               id="dificultad-id" 
               name="dificultad"
               value="{{ form.dificultad.value }}"
+              max="10"
               >
               {% for error in form.dificultad.errors %}
               <p style="color: #ff5555">{{ error }}</p>
@@ -154,6 +158,7 @@
               id="seguimiento-id" 
               name="seguimiento"
               value="{{ form.seguimiento.value }}"
+              max="10"
               >
               {% for error in form.seguimiento.errors %}
               <p style="color: #ff5555">{{ error }}</p>
